Images align & fixed navbar.

--- a/style.css
+++ b/style.css
@@ -40,6 +40,44 @@ main h1 {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.281);
 }
 
+/*NAVBAR*/
+
+.sidenav {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgba(2, 93, 185, 0.452);
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  .sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 1em;
+    color: #011aa3;
+    display: block;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .main {
+    margin-left: 160px; /* Same as the width of the sidenav */
+    padding: 0px 10px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+  /*END OF NAVBAR*/
+
 h2 {
     margin-top: 50px;
 }
